# days

./: build.gradle  gradle.properties
app/: build.gradle  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/cfg/: cifar.data  cifar100.data  cifar_custom.cfg  cifar_custom100.cfg  cifar_small.cfg
app/src/main/assets/data/: labels.txt
app/src/main/assets/weight/: cifar_custom.weights  cifar_custom100.weights  cifar_small.weights
app/src/main/cpp/: CMakeLists.txt  DNN-jni.c  classifier.c  clusteringTest6.c  clusteringTest6.h  clusteringTest6_emxutil.h  clusteringTest6_terminate.h  darknet.c  dct.h  dec2bin.h  hello-jni.c  image.c  interface_jni.c  interface_jni.h  network.c  parser.c  parser.h  rtGetInf.h  rtGetNaN.c  utils.c
app/src/main/cpp/darknet/: DNN-jni.c  box.c  classifier_bck.c  darknet.c  network.h  xnor_layer.c
app/src/main/cpp/mci/: clusteringTest6_emxutil.c  clusteringTest6_initialize.c  clusteringTest6_initialize.h  clusteringTest6_terminate.c  clusteringTest6_types.h  dct.c  dec2bin.c  huffman_ac.c  huffman_ac.h  interface_jni.c  interface_jni.h  rtGetInf.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h
app/src/main/res/anim/: hold.xml  list_animation.xml  slide_animation.xml  slide_in_up.xml  slide_out_up.xml
app/src/main/res/color/: color_calendar_text.xml
app/src/main/res/drawable/: bg_round_blue_18dp.xml  bg_round_blue_40dp.xml  bg_round_blue_80dp.xml  bg_round_primary.xml  bg_round_white.xml  border.xml  (+2 more)
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary310/: build.gradle
(+147 files in other folders)
